# Indie-Studio

./: .gitignore  .gitmodules  Indie-Studio.sln  Makefile  README.md  app.js  installer-socket.sh  installer.sh  package-lock.json  package.json  server.js  setup.sh  unistaller-socket.sh  unistaller.sh
Indie-Studio/: .clang_complete  .tags  .tags1  CMakeLists.txt  Configuration.props  Indie-Studio.aps  Indie-Studio.rc  Indie-Studio.vcxproj  Indie-Studio.vcxproj.filters  Makefile  tet
Indie-Studio/include/: AllSpells.hpp  Application.hpp  BaseApplication.hpp  Bullet.hpp  CameraMan.hpp  Collision.h  Core.hpp  DotSceneLoader.h  Dungeon.hpp  Entity.hpp  GameLogic.hpp  GameState.hpp  GameStateManager.hpp  HUD.hpp  Indie.hpp  Map.hpp  Menu.hpp  Mobs.hpp  NewMOC.h  OgreBulletUtils.h  PFXSSAO.hpp  Player.hpp  Socket.hpp  SoundManager.h  Spell.hpp  SpellManager.hpp  SplashScreen.hpp  Utils.hpp  WorkingQueue.hpp  sio_client.h  sio_socket.h
Indie-Studio/media/: laser.material
Indie-Studio/media/characters/models/: Adventurer.mesh  ArmyPilot.mesh  DarkElf.material  DarkElf.mesh  Knight.material  Knight.mesh  Ogre.mesh  Orc.material  Orc.mesh  Troll.mesh  Wizard.mesh  Wizard.skeleton  low-poly-fox-by-pixelmannen.blend  psc-warrior.blend  sg-sword-13.blend  sg-sword12.blend  skeleton_archer.mesh
Indie-Studio/media/dungeon/: Barrel_(1).000.mesh  Barrel_(1).001.mesh  Barrel_(1).mesh  Barrel_(10).001.mesh  Barrel_(10).mesh  Barrel_(11).001.mesh  Barrel_(11).mesh  Barrel_(12).001.mesh  Barrel_(12).mesh  Barrel_(13).001.mesh  Barrel_(13).mesh  Barrel_(14).001.mesh  Barrel_(14).mesh  Barrel_(15).000.mesh  Barrel_(15).001.mesh  Barrel_(15).mesh  Barrel_(16).001.mesh  Barrel_(16).mesh  Barrel_(17).000.mesh  Barrel_(17).001.mesh  Barrel_(17).mesh  Barrel_(18).000.mesh  Barrel_(18).001.mesh  Barrel_(18).mesh  Barrel_(19).000.mesh  Barrel_(19).001.mesh  Barrel_(19).mesh  Barrel_(2).001.mesh  Barrel_(2).mesh  Barrel_(3).000.mesh  Barrel_(3).001.mesh  Barrel_(3).mesh  Barrel_(4).001.mesh  Barrel_(4).mesh  Barrel_(5).000.mesh  Barrel_(5).001.mesh  Barrel_(5).mesh  Barrel_(6).001.mesh  Barrel_(6).mesh  Barrel_(7).001.mesh  (+2919 more)
Indie-Studio/media/interface/: CMakeLists.txt  SplashScreen.layout  ceed.project
Indie-Studio/media/interface/animations/: GameMenu.anims  example.anims
Indie-Studio/media/interface/fonts/: Batang-18.font  DejaVuSans-10-NoScale.font  DejaVuSans-10.font  DejaVuSans-12-NoScale.font  DejaVuSans-12.font  DejaVuSans-14-NoScale.font  DejaVuSans-14.font  FairChar-30.font  GreatVibes-16.font  GreatVibes-22.font  Junicode-13.font  Jura-10.font  Jura-13.font  Jura-18.font  Legal.txt  LicenseUbuntuFont.txt  batmfa.font
Indie-Studio/media/interface/imagesets/: AlfiskoSkin.imageset  DriveIcons.imageset  FairChar.imageset  GameMenu.imageset  HUDDemo.imageset  OgreTray.imageset  Portraits.imageset  ReadMe.txt  SampleBrowser.imageset  TaharezLook.imageset  Vanilla.imageset  WindowsLook.imageset  mainMenu.imageset
Indie-Studio/media/interface/layouts/: Avatar.layout  AvatarDarkFiend.layout  AvatarIngenior.layout  AvatarWarrior.layout  AvatarWizard.layout  AvatarWizzard.layout  ChatBox.layout  Console.wnd  Credits.layout  DarkFiendSpell.layout  Demo8.layout  DragDropDemo.layout  EffectsDemo.layout  FontDemo.layout  GameMenu.layout  GameOver.layout  HUDDemoGameOver.layout  HUDDemoIngame.layout  HealthBar.layout  IG_MENU.layout  IngeniorSpell.layout  LoadingScreen.layout  Menu.layout  SampleBrowser.layout  SampleBrowserLoadScreen.layout  Settings.layout  SpellBar.layout  SplashScreen.layout  TabControlDemo.layout  TabPage.layout  TabPage1.layout  TabPage2.layout  TaharezLookOverview.layout  TextDemo.layout  TreeDemoTaharez.layout  UI_IG.layout  VanillaConsole.layout  VanillaLookOverview.layout  VanillaWindows.layout  WarriorSpellBar.layout  (+6 more)
Indie-Studio/media/interface/looknfeel/: AlfiskoSkin.looknfeel  GameMenu.looknfeel  Generic.looknfeel  HUDDemo.looknfeel  InventoryComponents.looknfeel  OgreTray.looknfeel  SampleBrowser.looknfeel  TaharezLook.looknfeel  Vanilla.looknfeel  VanillaCommonDialogs.looknfeel  WindowsLook.looknfeel
Indie-Studio/media/interface/lua_scripts/: demo8.lua
Indie-Studio/media/interface/schemes/: AlfiskoSkin.scheme  GameMenu.scheme  Generic.scheme  HUDDemo.scheme  OgreTray.scheme  SampleBrowser.scheme  TaharezLook.scheme  VanillaCommonDialogs.scheme  VanillaSkin.scheme  WindowsLook.scheme  mainMenu.scheme
Indie-Studio/media/interface/xml_schemas/: Falagard.xsd  Font.xsd  GUILayout.xsd  GUIScheme.xsd  Imageset.xsd  Samples.xsd
Indie-Studio/media/map/: Castle.001.material  Cube.002.mesh  Garden.material  Map__14_Normal_Bump.tga  Map__17_Normal_Bump.tga  Map__19_Normal_Bump.tga  Map__9_Normal_Bump.tga  Material.material  Plane.313.mesh  Tree.001.material  Tree.003.mesh  Tree.005.mesh  Tree.008.mesh  Tree.009.mesh  Tree.012.mesh  Tree.013.mesh  Tree.015.mesh  Tree.016.mesh  Tree.017.mesh  Tree.018.mesh  Tree.019.mesh  Tree.022.mesh  Tree.023.mesh  Tree.mesh  Windows.001.material  brick.material  brick_pile.mesh  brick_pile_messy.mesh  brick_single.mesh  brick_wall_column_big.mesh  brick_wall_column_thin.mesh  brick_wall_large.mesh  brick_wall_large_1_column.mesh  brick_wall_large_2_columns.mesh  brick_wall_large_corner.mesh  brick_wall_large_top.mesh  brick_wall_large_without_top.mesh  brick_wall_medium.mesh  brick_wall_medium_1_column.mesh  brick_wall_medium_2_columns.mesh  (+14 more)
Indie-Studio/media/map/Models/: Barrel.mesh  dwarf.mesh  hang.bridge.01.mesh  rock.07.mesh  tree.05.mesh  tree.09.mesh
Indie-Studio/media/map/moutain/: MT038a.material  moutain.scene
Indie-Studio/media/map/peach/: Material.material  (+16 more)
Indie-Studio/src/: AllSpells.cpp  Angel.cpp  Application.cpp  Application.hpp  BaseApplication.cpp  BaseApplication.hpp  Bullet.cpp  CameraMan.cpp  CameraMan.hpp  Collision.cpp  Core.cpp  DotSceneLoader.cpp  Dungeon.cpp  Entity.cpp  GameLogic.cpp  GameStateManager.cpp  HUD.cpp  Indie.cpp  Map.cpp  Menu.cpp  Mobs.cpp  NewMOC.cpp  Player.cpp  Socket.cpp  SoundManager.cpp  Spell.cpp  SpellManager.cpp  SplashScreen.cpp  WorkingQueue.cpp  WorkingQueue.hpp  main.cpp
(+216 files in other folders)
